# ChrisKornaros.github.io

./: .gitignore  CLAUDE.md  MIGRATION.md  MODULES.md  README.md  dir_struct-source.txt  dir_struct.txt  hello.py  index.html  listings.json  prompt.txt  pyproject.toml  search.json
.claude/: settings.json
.claude/commands/: announce.md  publish.md
.github/workflows/: publish.yml
_site/: index.html  listings.json  search.json  sitemap.xml
docs/: CNAME  _brand.yml  _quarto.yml  dark.scss  index.html  index.qmd  light.scss  listings.json  robots.txt  search.json  sitemap.xml  styles.css
docs/_site/: index.html  search.json
docs/blogs/: index.qmd
docs/brand/: dark.scss  light.scss
modules/git-flow-no-direct-main/: index.md
modules/git-flow-session-end/: index.md
modules/no-cat-head-via-bash/: index.md  pre_read_guard.py
modules/no-sudo-as-shortcut/: index.md  settings-snippet.json
modules/python-uv-only/: index.md
modules/stay-in-project-tree/: index.md  settings-snippet.json
outlines/: docker_outline.md
pages/about/: about.html
pages/blogs/: blogs.html
pages/guides/: guides.html
pages/projects/: projects.html
pages/recipes/: ebook.html  recipes.html
pages/research/: research.html
site_libs/bootstrap/: bootstrap-4901cf6b39d17130e24ef0ac803d952d.min.css  bootstrap-4ea2184ae34d4d009c65342ce5d7debf.min.css  (+17 more)
site_publish/: __init__.py  announce.py  bluesky.py  cli.py  config.py  convert.py  embeds.py  frontmatter_map.py  obsidian.py  routing.py  secrets.py
site_publish/templates/: blogs.md  guides.md  (+3 more)
source/: _brand.yml  _quarto.yml
(+1222 files in other folders)
