[project]
name = "chriskornaros-github-io"
version = "0.1.0"
description = "Quarto personal website + the vault->site publishing pipeline."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "quarto>=0.1.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
publish = "site_publish.cli:publish"
new = "site_publish.cli:new_draft"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["site_publish"]
